# ledBoard

./: .gitignore  CMakeLists.txt  README.md  convert.py  flash.sh  ideas.text  ideas.txt  shared.py  simulate.py  writePix.sh
cppPix/: CMakeLists.txt  Image.h  main.cpp
cppPixLib/: CMakeLists.txt  Color.cpp  Color.h  Exception.cpp  Exception.h  FilesystemRenderTarget.cpp  FilesystemRenderTarget.h  FontRenderer.cpp  FontRenderer.h  FrameTimer.cpp  FrameTimer.h  IRenderTarget.cpp  IRenderTarget.h  Image.cpp  Image.h  ImageFile.cpp  ImageFile.h  SDLRenderTarget.cpp  SDLRenderTarget.h  TomThumbFont.h  VisitorFont.h
cppPixLib/fonts/: Prototype15Font.h  TomThumbFont.h  Visitor12Font.h  Visitor15Font.h  Visitor7Font.h  fontRenderer.py
hockeyScores/: CMakeLists.txt  RegularSeasonScoreboardv3Trimmed.jsonp  hockeyScores.service  main.cpp  webApis.txt
images/: bar.pix  bc.pix  beer.pix  ben.pix  cs.pix  donger.pix  donger2.pix  donger2Jizm.pix  dota.pix  eliteDangerous.pix  flowey.pix  google.pix  googleBlack.pix  gradient.pix  gradius.pix  hitler.pix  kc.pix  lambda.pix  link.pix  mario.pix  mickey.pix  nazi.pix  overwatch.pix  pikachu.pix  poopla_grande.pix  randAll.pix  rum.pix  smiley.pix  soledSnek.pix  triforce.pix  tsm.pix  unionJack.pix  zach.pix
life/: BoardState.cpp  BoardState.h  CMakeLists.txt  glider.pix  main.cpp
loaderTest/: CMakeLists.txt  main.cpp
marquee/: CMakeLists.txt  main.cpp
testImages/: allBlue.pix  allGreen.pix  allRed.pix  blueGrad.pix  greenGrad.pix  pepe.pix  rgb.pix  rgbGrad.pix
visualizations/: CMakeLists.txt  main.cpp  perlin.cpp  psycho.cpp
